--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -144,6 +144,14 @@ a {
   text-decoration: none;
 }
 
+.color-background {
+  position: relative;
+  //flex-grow: 1;
+  width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0;
+}
+
 /* COMPONENTS */
 
 /* NAVIGATION PRIMARY */
