--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -11,10 +11,10 @@
 }
 
 input#search-bar{
-  margin: 0 auto;
+  margin: auto;
   width: 100%;
   height: 45px;
-  padding: 0 20px;
+  padding: 0px 20px;
   font-size: 1rem;
   border: 1px solid var(--color-black-ish);
   border-radius: 15px;
@@ -49,15 +49,17 @@ input#search-bar{
 
 @media only screen and (max-width: 600px){
     .search-container{
-        width: 250px;
+        width: 220px;
     }
 
     input#search-bar{
         height: 35px;
+        padding: 0px 10px;
     }
 
     .search-icon{
         top:-56px;
+        right: -36px;
     }
     
 }
