implemented secondary navigation

--- a/src/pages/stot.astro
+++ b/src/pages/stot.astro
@@ -1,3 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro"
+
 ---
+<BaseLayout title="Stot">
+	<section>
+		<p>Stot</p>
+	</section>
+	</BaseLayout>
