--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -112,6 +112,7 @@ p {
   font-family: var(--font-body);
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-regular);
+  margin-bottom: var(--spacing-2xs);
 }
 
 .light-text {
