switched a color to black

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -80,6 +80,10 @@ const navLinks = [{
 
 <style>
 
+a {
+        color: var(--color-black-ish);
+    }
+
 /*SEARCH BAR*/
 .search-flex{
   display: flex;
