--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -81,6 +81,10 @@ const navLinks = [{
 
 <style>
 
+    a {
+        color: var(--color-black-ish);
+    }
+
 /*SEARCH BAR*/
 .search-flex{
   display: flex;
