improved the ColorSection component

--- a/src/components/ui/BoxColor.astro
+++ b/src/components/ui/BoxColor.astro
@@ -21,4 +21,10 @@ const { color, text, title } = Astro.props;
         margin-top: var(--spacing-small);
         margin-bottom: var(--spacing-medium);
     }
+
+    @media only screen and (min-width: 600px) {
+        .BoxColor {
+            width: 90%;
+        }
+}
 </style>
