--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -1,6 +1,7 @@
 ---
 import Button from "./Button.astro";
 const { color, hex, title } = Astro.props;
+const { link, text, size = "large" } = Astro.props;
 ---
 
 
@@ -8,6 +9,7 @@ const { color, hex, title } = Astro.props;
     <div class="flex-container">
     <section class="headline">
         <h1 class="primary-header">{title}</h1>
+        <slot name="subheader"></slot>
       </section>
       <div class:list={[ 'color-background', color]}>
         <svg width="8" height="8" viewBox="0 0 75 75" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,23 +21,29 @@ const { color, hex, title } = Astro.props;
     </div>
     <section class:list={[ 'description', color]}>
       <section class="description-container">
-      <slot></slot>
+      <slot name="description"></slot>
     </section>
+    <div class="button-wrapper">
+    <Button {link} {text} {size}/>
+  </div>
     </section>
+   
   </div>
 
 </section>
 
-<style lang="scss"> 
+<style> 
 
 
 
 /* COLOR SECTION */
 .ColorSection {
-  width: 70vw;
+  margin-top: var(--spacing-2xl);
+  margin-bottom: var(--spacing-2xl);
+}
   .flex-container {
     display: flex;
-    width: 70vw;
+    width: 90vw;
   }
 
   h1 {
@@ -62,10 +70,25 @@ const { color, hex, title } = Astro.props;
   }
 
   .description {
-    width: 70vw;
+    width: 90vw;
     border-radius: 8px 0 8px 8px;
   }
+
+
+
+
+  @media only screen and (min-width: 600px) {
+    .flex-container {
+    display: flex;
+    width: 75vw;
+  }
+
+  .description {
+    width: 75vw;
+  }
 }
+
+
   </style>
 
 
