--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -21,26 +21,29 @@ import ColorSection from "../components/ui/ColorSection.astro";
       <Button text="13-16 år" style="color" size="medium" />
       <Button text="16-24 år" style="color" size="medium" />
     </div>
-    <ColorSection color="green" title="EmpowR" hex="#d1ff99">
-      <p>
+    <ColorSection color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
+		<p slot="subheader">For dig mellem 13-16 år.</p>
+      <p slot="description">
         I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
         som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
       </p>
       <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
     </ColorSection>
-	<ColorSection color="pink" title="EmpowR" hex="#d1ff99">
-		<p>
+	<ColorSection color="pink" title="Sisterhood" hex="#d1ff99" text="Timeld Sisterhood" link="/">
+		<p slot="subheader">For dig mellem 18-24, som er indskrevet på en uddannelse.</p>
+		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
 		  som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
 		</p>
-		<p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
+		<p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
 	  </ColorSection>
-	  <ColorSection color="purple" title="EmpowR" hex="#d1ff99">
-		<p>
+	  <ColorSection color="purple" title="Velux" hex="#d1ff99" text="Timeld Velux" link="/">
+		<p slot="subheader">For dig mellem 18-24, som ikke er indskrevet på en uddannelse.</p>
+		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
 		  som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
 		</p>
-		<p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
+		<p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
 	  </ColorSection>
   </GirlsUniLayout>
 </div>
@@ -48,6 +51,8 @@ import ColorSection from "../components/ui/ColorSection.astro";
 <style>
   .Faelleskaber {
     width: 100%;
+	display: flex;
+	align-self: center;
   }
   .filter-buttons-container {
     display: flex;
