--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -16,7 +16,7 @@ const navLinks = [{
     url: '/medier',
 },
 {
-    name: 'Til forside',
+    name: 'GirlTalk',
     url: '/',
 }]
 ---
@@ -24,7 +24,7 @@ const navLinks = [{
 <nav class="NavPrimary"> 
 
 <div class="nav-primary-logo">
-    <div class="logo"><a href="index.html"> GirlTalk</a></div>
+    <div class="logo"><a href="index.html">PIGEUNIVERSET</a></div>
 <div class="search-flex">
     <div class="search-container">
         <form action="/search" method="get">
@@ -62,7 +62,7 @@ const navLinks = [{
                 <li><a href="brevkasse.html">Brevkasse</a></li>
                 <li><a href="faelleskaber.html">Faelleskaber</a></li>
                 <li><a href="medier.html">Medier</a></li>
-        <li class="last-mobile-link"> <a href="index.html">Til forsider</a></li>
+        <li class="last-mobile-link"> <a href="index.html">GirlTalk</a></li>
         
             </ul>
         
@@ -204,7 +204,7 @@ a {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: var(--color-off-white);
+  background-color: var(--color-pink);
   top: -100%; left: 0; right: 0; bottom: 0;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
@@ -293,7 +293,8 @@ padding-top: 10px;
 
 
 .NavPrimary{
-    box-shadow: 0 3px 10px rgb(255 228 238 / 0.50)
+background-color: var(--color-pink);
+box-shadow: 0 3px 10px rgb(255 228 238 / 0.50)
 
 }
 
@@ -302,7 +303,12 @@ padding-top: 10px;
     @media only screen and (min-width: 600px){
     .NavPrimaryMobile{
         display: none;
-    }}
+    }
+
+
+}
+
+
 
  
 
@@ -311,8 +317,8 @@ padding-top: 10px;
     .NavPrimary{
         display: none;
     }
+    
 
-    }
 
 
 </style>
