--- a/src/components/cards/Category.astro
+++ b/src/components/cards/Category.astro
@@ -2,8 +2,8 @@
 const { category, header  } = Astro.props;
 ---
 <div class="Category">
-<p>● {category}</p>
-<p>{header}</p>
+<p class="theme-header">● {category}</p>
+<p class="theme-header">{header}</p>
 </div>
 
 <style>
