--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 		<h2>... men vi er her, når du bliver i tvivl</h2>
 	</section>
 <div>
-	<Button text="Go to Girls Universe" link="/pigeunivers/main" size="medium" style="dark"/>
+	<Button text="Go to Girls Universe" link="/main" size="extra-large"/>
 </div>
 <ColorSection color="green" title="EmpowR" >
 	<p>I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor.
