--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -2,15 +2,17 @@
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
 import Button from "../components/ui/Button.astro";
+import BrevkasseCard from "../components/cards/BrevkasseCard.astro"
 ---
 
 <GirlsUniLayout title="Brevkasse">
-  <ColorSection color="purple" title="GirlTalk's brevkasse">
+  <ColorSection color="pink" title="GirlTalk's brevkasse">
     
     <p>Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
     <p>Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
     <Button size="small" text="Click me" />
   </ColorSection>
+  <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
 </GirlsUniLayout>
 
 
