--- a/src/components/ui/BoxColor.astro
+++ b/src/components/ui/BoxColor.astro
@@ -3,7 +3,7 @@ const { color, text, title } = Astro.props;
 ---
 <section class:list={[ 'BoxColor', color]} >
     <h2 class="title">{title}</h2>
-<p>{text}</p>
+<p class="text">{text}</p>
 </section>
 
 
