--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,7 +36,7 @@
   --font-size-large: 1.25rem;
   --font-size-medium: 1rem;
   --font-size-small: 0.8rem;
-  --font-size-xs: 0.64;
+  --font-size-xs: 0.64rem;
 
   /* spacing */
   --spacing-4xl: 280px;
