--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -2,17 +2,74 @@
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
 import Button from "../components/ui/Button.astro";
-import BrevkasseCard from "../components/cards/BrevkasseCard.astro"
+import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
+import SearchBar from "../components/ui/SearchBar.astro";
 ---
 
 <GirlsUniLayout title="Brevkasse">
-  <ColorSection color="pink" title="GirlTalk's brevkasse">
-    
-    <p>Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
-    <p>Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
-    <Button size="small" text="Click me" />
-  </ColorSection>
-  <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+  <div class="brevkasselayout">
+    <ColorSection color="pink" title="GirlTalk's brevkasse">
+      
+      <p>Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
+      <p>Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
+      <Button size="small" text="Click me" />
+    </ColorSection>
+    <div>
+      <p class="light-text searchcopy">Søg efter breve</p>
+      <SearchBar></SearchBar>
+    </div>
+    <!-- div>
+      <Button size="small" style="purple" text="noget " />
+      <Button size="small" style="purple" text="noget " />
+      <Button size="small" style="purple" text="noget " />
+      <Button size="small" style="purple" text="noget " />
+      <Button size="small" style="purple" text="noget " />
+      <Button size="small" style="purple" text="noget " />
+    </div> -->
+    <!-- <label for="filter">Filtrér efter tema</label>
+
+    <select name="filter" id="filtering">
+      <option value="choose">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+      </select> -->
+    <p class="indicator">8 ud af 129</p>
+    <div class="lettercontainer">
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+    </div>
+  
+  </div>
 </GirlsUniLayout>
 
+<style>
+  .searchcopy {
+    color: var(--color-black-ish);
+    opacity: var(--opacity-75);
+  }
+  .indicator {
+    color: var(--color-black-ish);
+    opacity: var(--opacity-50);
+  }
+  .lettercontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--spacing-small);
+  }
 
+  .brevkasselayout {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+</style>
