--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -5,19 +5,20 @@
 
   <style>
 .search-container{
-  width: 479px;
+  width: 100%;
   display: block;
   margin: auto;
 }
 
 input#search-bar{
   margin: auto;
+  background-color: var(--color-off-white);
   width: 100%;
   height: 45px;
   padding: 0px 20px;
   font-size: 1rem;
   border: 1px solid var(--color-black-ish);
-  border-radius: 15px;
+  border-radius: 8px;
   outline: none;
   &:focus{
     border: 1px solid var(--color-pink);
