--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -50,17 +50,18 @@ input#search-bar{
 
 @media only screen and (max-width: 600px){
     .search-container{
-        width: 220px;
+        width: 100%;
     }
 
     input#search-bar{
         height: 35px;
         padding: 0px 10px;
+        width: -webkit-fill-available;
     }
 
     .search-icon{
         top:-56px;
-        right: -36px;
+        right: -15px;
     }
     
 }
