--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -4,6 +4,8 @@ import ColorSection from "../components/ui/ColorSection.astro";
 import Button from "../components/ui/Button.astro";
 import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
 import SearchBar from "../components/ui/SearchBar.astro";
+import Dropdown from "../components/ui/Dropdown.astro";
+import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 ---
 
 <GirlsUniLayout title="Brevkasse">
@@ -14,26 +16,12 @@ import SearchBar from "../components/ui/SearchBar.astro";
       <p>Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
       <Button size="small" text="Click me" />
     </ColorSection>
+    <UnderlinedHeader header="Læs andre pigers tanker" class="subheader"></UnderlinedHeader>
     <div>
       <p class="light-text searchcopy">Søg efter breve</p>
       <SearchBar></SearchBar>
     </div>
-    <!-- div>
-      <Button size="small" style="purple" text="noget " />
-      <Button size="small" style="purple" text="noget " />
-      <Button size="small" style="purple" text="noget " />
-      <Button size="small" style="purple" text="noget " />
-      <Button size="small" style="purple" text="noget " />
-      <Button size="small" style="purple" text="noget " />
-    </div> -->
-    <!-- <label for="filter">Filtrér efter tema</label>
-
-    <select name="filter" id="filtering">
-      <option value="choose">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-      </select> -->
+    <Dropdown></Dropdown>
     <p class="indicator">8 ud af 129</p>
     <div class="lettercontainer">
       <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
@@ -50,6 +38,9 @@ import SearchBar from "../components/ui/SearchBar.astro";
 </GirlsUniLayout>
 
 <style>
+
+
+
   .searchcopy {
     color: var(--color-black-ish);
     opacity: var(--opacity-75);
@@ -57,6 +48,8 @@ import SearchBar from "../components/ui/SearchBar.astro";
   .indicator {
     color: var(--color-black-ish);
     opacity: var(--opacity-50);
+    margin-bottom: var(--spacing-xl);
+    margin-top: var(--spacing-xl);
   }
   .lettercontainer {
     display: flex;
@@ -69,7 +62,16 @@ import SearchBar from "../components/ui/SearchBar.astro";
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: var(--spacing-small);
 
   }
+  @media only screen and (max-width: 600px) {
+    .indicator {
+    
+    margin-bottom: var(--spacing-small);
+    margin-top: var(--spacing-small);
+  }
+          
+         }
 
 </style>
