--- a/src/components/ui/QuoteSection.astro
+++ b/src/components/ui/QuoteSection.astro
@@ -16,9 +16,9 @@ const { color, firstLine, secondLine, thirdLine } = Astro.props;
 
 <style>
   div {
-    width: 70vw;
+    max-width: 300px;
     border-radius: 8px;
-    padding: 15px 25px;
+    padding: 5px 20px;
     width: fit-content;
   }
 
