--- a/src/pages/frivillig.astro
+++ b/src/pages/frivillig.astro
@@ -1,9 +1,32 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro"
+import ColorSection from "../components/ui/ColorSection.astro"
 
 ---
 <BaseLayout title="Volunteer">
 	<section>
-		<p>Volunteer</p>
+		<ColorSection color="green" title="Gruppeleder" hex="#d1ff99" text="Ansøg som gruppeleder" link="/">
+		  <p slot="description">
+			I vores gruppeforløb skabes der et frirum, hvor pigerne kan tale om de ting, der fylder, samtidig med at de får redskaber til at håndtere de udfordringer, de møder i deres liv. 
+		  </p>
+		  <p slot="description">Vores frivillige gruppeledere gør en direkte forskel for pigerne i gruppen, samtidig med at deres faglige profil styrkes, og der opnås erfaring med at facilitere en gruppe. Hver gruppe består af 4-10 piger i aldersgrupperne 13-16 år, 15-18 år og 16-24 år.</p>
+		  <p slot="description">Vores gruppeforløb varer imellem 8 og 16 uger. Du skal forvente at afsætte 3-5 timer ugentligt som gruppeleder i de uger, forløbet varer.</p>
+		</ColorSection>
+		<ColorSection color="pink" title="Rådgiver" hex="#d1ff99" text="Ansøg som rådgiver" link="/">
+			<p slot="description">
+				Vores ungerådgivning har til opgave at besvare henvendelser på chat og SMS fra piger, der rækker ud til os. Pigerne kan blandt andet skrive om emner som kærestesorg, ensomhed, selvskade, konflikter med venner og familie, præstationsangst eller udfordringer i skolen.
+			</p>
+			<p slot="description">I rådgivningen er det vigtigt, at der skabes et tillidsfuldt rum til pigerne, så de oplever at kunne tale ud om de svære ting i livet uden at føle sig dømt eller misforstået.</p>
+			<p slot="description">Som rådgiver har du en hverdagsvagt hver anden uge og en weekendvagt hver anden måned, begge á 2,5 time. Alle vagter ligger i aftentimerne, da chat- og SMS-rådgivningens åbningstid er i tidsrummet 18:30-24:00.</p>
+		  </ColorSection>
+		  <ColorSection color="purple" title="Foredragsholder" hex="#d1ff99" text="Ansøg som fordragholder" link="/">
+			<p slot="description">
+				Vil du være med til at fortælle unge piger, at de er gode nok som de er? Give dem redskaber til at navigere i teenageårene, når usikkerheden banker på? Er du god til at tale foran mange mennesker? Så bliv foredragsholder i GirlTalk.
+			</p>
+			<p slot="description">Vi søger nye foredragsholdere i alderen 18-30 år til vores ung-til-ung foredrag ”Altid god nok – også uden filter", som fokuserer på de temaer, der ofte fylder i et teenage-pigeliv.
+				Det er temaer som fx identitet, selvværd, grænsesætning og sociale mediers indflydelse på vores hverdag og selvopfattelse. Som foredragsholder kan timerne variere fra måned til måned, men gennemsnitligt vil det forventes at skulle sætte 2-6 timer af om måneden.</p>
+				<p slot="description">Det forventes, at du som foredragsholder kan tage mellem 1-3 foredrag om måneden, og du skal være indstillet på at blive booket til foredrag med 14 dages varsel.
+					Vi holder samtaler løbende, så søg gerne så hurtigt som muligt via formularen herunder</p>
+		  </ColorSection>
 	</section>
 	</BaseLayout>
