--- a/src/components/ui/QuoteHeading.astro
+++ b/src/components/ui/QuoteHeading.astro
@@ -1,13 +1,14 @@
 ---
 const { color, firstLine, secondLine, themeHeader } = Astro.props;
 ---
-<p class="themeheader" >{themeHeader}</p>
+
 <section class="QuoteHeadingSection">
+  <p class="theme-header" >{themeHeader}</p>
   <div class:list={["line-one-container", color]}>
-    <img src="/images/quote.svg" alt="" /><p class="secondary-header">{firstLine}</p>
+    <img src="/images/quote.svg" alt="" /><p class="secondary-header-quote">{firstLine}</p>
   </div>
   <div class:list={["line-two-container", color]}>
-    <p class="secondary-header">{secondLine}</p>
+    <p class="secondary-header-quote">{secondLine}</p>
   </div>
 </section>
 
@@ -22,21 +23,17 @@ const { color, firstLine, secondLine, themeHeader } = Astro.props;
   .line-one-container {
     display: flex;
     gap: 20px;
-    margin-left: 10px;
+    margin-left: 0px;
     border-radius: 8px 8px 0 8px;
   }
 
   .line-two-container {
     margin-left: 80px;
-    border-radius: 0 8px 8px 0;
+    border-radius: 0px 8px 8px 8px;
   }
 
-  .line-three-container {
-    margin-left: 60px;
-    border-radius: 0 0 8px 8px;
-  }
 
- .QuoteHeadingSection p {
+.secondary-header-quote {
     font-size: 4vw !important;
   }
 
@@ -51,4 +48,21 @@ const { color, firstLine, secondLine, themeHeader } = Astro.props;
   .purple {
     background-color: var(--color-purple);
   }
+
+.theme-header{
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-semibold);
+}
+
+
+@media only screen and (min-width: 600px){
+
+  .secondary-header-quote {
+    font-size: 2vw !important;
+  }
+
+}
+
+
+  
 </style>
