--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -33,15 +33,28 @@ import Button from "./Button.astro";
         .mobilefilter {
             display: flex;
             flex-direction: column;
+            width: 100%;
+            height: 35px;
+            padding-bottom: var(--spacing-small);
         }
+
         .select {
           width: 100%;
           border-radius: 8px;
-          padding: 5px;
+          padding-top: 8px;
+          padding-bottom: 8px;
+          padding-left: 5px;
+          padding-right: 5px;
+          background-color: var(--color-off-white);
+
+        }
+        option {
+          font-family: var(--font-display);
         }
 
         .label-text {
           margin-bottom: 10px;
+          font-family: var(--font-display);
         }
 
         .desktopfilter {
