--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -14,7 +14,7 @@ input#search-bar{
   margin: auto;
   background-color: var(--color-off-white);
   width: 100%;
-  height: 45px;
+  height: 5px;
   padding: 0px 20px;
   font-size: 1rem;
   border: 1px solid var(--color-black-ish);
@@ -51,6 +51,7 @@ input#search-bar{
 @media only screen and (max-width: 600px){
     .search-container{
         width: 100%;
+        height: var(--spacing-large);
     }
 
     input#search-bar{
